bug: datepicker multiple dialog on mobile view

--- a/projects/core/src/components/form/date-picker/date-picker.component.scss
+++ b/projects/core/src/components/form/date-picker/date-picker.component.scss
@@ -271,8 +271,8 @@
         justify-content: center;
 
         &.active {
-          border-top: 1px solid var(--color-gray--5);
-          border-bottom: 1px solid var(--color-gray--5);
+          border-top: 1px solid var(--color-gray--7);
+          border-bottom: 1px solid var(--color-gray--7);
         }
       }
     }
